--- a/BingoZB/package.json
+++ b/BingoZB/package.json
@@ -7,18 +7,22 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync || echo ''"
+		"prepare": "svelte-kit sync || echo ''",
+		"format": "prettier --write .",
+		"lint": "prettier --check ."
 	},
 	"devDependencies": {
-		"@rollup/plugin-json": "^6.1.0",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
+		"@tailwindcss/forms": "^0.5.9",
+		"@tailwindcss/vite": "^4.0.0",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"svelte": "^5.0.0",
-		"vite": "^7.0.4"
-	},
-	"dependencies": {
-		"@tailwindcss/vite": "^4.1.13",
-		"tailwindcss": "^4.1.13"
+		"tailwindcss": "^4.0.0",
+		"vite": "^7.0.4",
+		"vite-plugin-devtools-json": "^1.0.0"
 	}
 }
